--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-              </div>
+             <!-- </div>
         <br><br>
         <p class="text-center">
               <iframe src="https://hub.alienhub.xyz/show?utm_medium=interstellar" scrolling="no" width="450" height="150" frameborder="0"></iframe>
@@ -110,7 +110,7 @@ var x = setInterval(function() {
       <br>
       <br>
       <br>
-      <br>
+      <br>-->
         
         
             </div>
