--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("March 11, 2023 03:45:10").getTime();
+var countDownDate = new Date("Mar 11, 2023 15:37:25").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -98,7 +98,7 @@ var x = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "Spring Break!!";
+    document.getElementById("demo").innerHTML = "EXPIRED";
   }
 }, 1000);
 </script>
