--- a/public/play.html
+++ b/public/play.html
@@ -644,7 +644,7 @@ searchbar.addEventListener("mouseout", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://f.kbhgames.com/r/n64/game.php?file=Mortal-Kombat-4-U.zip')">
-        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/na.png"></a>
+        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/Mortal_Kombat_4_cover.jpg"></a>
       <p3>Mortal Kombat 4</p3>
     </div>
   </div>
