--- a/public/play.html
+++ b/public/play.html
@@ -324,6 +324,16 @@ searchbar.addEventListener("mouseout", function() {
 </div>
 <div class="row">
   <div class="span1">
+      <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://games.crazygames.com/en_US/capybara-clicker/index.html')">
+    <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/capybara.png" ></a>
+      <p3>Capybara Clicker</p3>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="row">
+  <div class="span1">
       <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://5dd2e1e3-015f-11ea-ad56-9cb6d0d995f7.poki-gdn.com/169dc11d-e718-4b36-9e60-d5ed5bc07a31/index.html')">
     <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/cr.jpg" ></a>
       <p3>Crossy Road</p3>
@@ -476,19 +486,9 @@ searchbar.addEventListener("mouseout", function() {
 </div>
 <div class="row">
   <div class="span1">
-      <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://justfall.lol')">
-        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/just-fall-lol.png"></a>
-      <p3>JustFall.LOL</p3>
-    </div>
-  </div>
-</div>
-</div>
-</div>
-<div class="row">
-  <div class="span1">
-      <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://krunker.io')">
-        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/krunker.jpg"></a>
-      <p3>Krunker</p3>
+      <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://fnf.kdata1.com/teamsea/1/?dd')">
+        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/FNF-vs-MrBeast-TeamSeas.webp"></a>
+      <p3>FNF VS. Mr. Beast</p3>
     </div>
   </div>
 </div>
@@ -574,6 +574,36 @@ searchbar.addEventListener("mouseout", function() {
 </div>
 <div class="row">
   <div class="span1">
+      <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://justfall.lol')">
+        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/just-fall-lol.png"></a>
+      <p3>JustFall.LOL</p3>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="row">
+  <div class="span1">
+      <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://games.crazygames.com/en_US/jet-rush/index.html')">
+        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/jet_rush.png"></a>
+      <p3>Jet Rush</p3>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="row">
+  <div class="span1">
+      <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://krunker.io')">
+        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/krunker.jpg"></a>
+      <p3>Krunker</p3>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="row">
+  <div class="span1">
       <div style="padding-top: 5px;" class="card animals" loading="lazy"><a href="play/learn-to-fly/index.html">
         <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/learn-to-fly.jpeg"></a>
       <p3>Learn To Fly</p3>
@@ -597,6 +627,16 @@ searchbar.addEventListener("mouseout", function() {
       <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://lordz.io/')">
         <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/lordz.png"></a>
       <p3>Lordz.io</p3>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="row">
+  <div class="span1">
+      <div style="padding-top: 5px;" class="card animals" loading="lazy"><a onclick="go('https://games.crazygames.com/en_US/looper-czi/index.html')">
+        <img class="lazy game-img" style="border-radius: 25px;" data-src="/assets/images/icons/looper.png"></a>
+      <p3>Looper</p3>
     </div>
   </div>
 </div>
